footer alignment fixed

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -85,6 +85,7 @@ footer{
 .footer-heading {
     font-size: 30px;
     font-weight: 900;
+    text-align: center;
 }
 
 .footer-copyright {
@@ -181,7 +182,8 @@ footer{
 
 @media only screen and (min-width: 1200px) {
     .footer-ul-margin {
-        margin-left: 30%;
+        margin: 10%;
+        text-align: center;
     }
 
     .banner {
